manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: viewtask

---
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  namespace: viewtask
spec:
  ports:
  - port: 80
    targetPort: 8070
  selector:
    app: webapp
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: viewtask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - image: 922416659900.dkr.ecr.us-east-1.amazonaws.com/terraformcreate:latest
        name: webapp
        imagePullPolicy: Always
        resources: {}
        ports:
          - containerPort: 8070
