path-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ac-ingress
  namespace: account-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: test.cloud443.in
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ac-svc
                port:
                  number: 80
